fix: alignment for shapes and colors

--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -3,6 +3,8 @@ body {
     flex-direction: column;
     justify-content: space-between;
     max-height: 100%;
+    overflow-x: hidden;
+
 }
 
 
